--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "@crft/prettier-config",
+  "name": "@getcrft/prettier-config",
   "version": "1.0.2",
   "description": "Global prettier config for CRFT projects",
   "main": "index.json",
   "repository": "git@github.com:getcrft/prettier-config.git",
   "author": "CRFT <support@crft.app>",
-  "license": "MIT"
+  "license": "MIT",
+  "publishConfig": {
+    "registry":  "https://npm.pkg.github.com"
+  }
 }
